# secret-store

./: .gitignore  Cargo.toml  Cross.toml  build.sh
blockchain-service/: Cargo.toml
docker/: Dockerfile.aarch64-linux-gnu  Dockerfile.arm-linux-gnueabihf  Dockerfile.armv7-linux-gnueabihf  Dockerfile.x86_64-linux-gnu
ethereum-service/: Cargo.toml
key-server/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: serialization.rs
substrate-runtime/module/: Cargo.toml
substrate-runtime/module/src/: document_key_shadow_retrieval.rs  document_key_store.rs  lib.rs  server_key_generation.rs  server_key_retrieval.rs
substrate-runtime/runtime/: Cargo.toml
substrate-runtime/runtime/src/: lib.rs
substrate-service/: Cargo.toml
